test/files/neg/quasiquotes_disambiguation_b.scala
object Test extends App {
  val a = "hi"
  val bi = "hi to you, too"
  //println(a s"foo")
  println("a" s"foo")
  //println(s"foo" b)
  //println(s"foo" "b")
}